[project]
name = "v2ray-reaper"
version = "0.1.0"
description = "V2Ray configs collector."
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Lone", email = "loneinheart@tfwno.gf" }]
dependencies = [
  "aiohttp>=3.10.5",
  "pybase64>=1.4.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.19.1",
  "ruff>=0.7.1",
]

[tool.ruff]
target-version = "py312"
line-length = 99
exclude = [
  ".git",
  ".venv",
  ".idea",
  ".vscode",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "N", # pep8-naming
  "S", # flake8-bandit
  "B", # flake8-bugbear
  "G", # flake8-logging-format
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "EM", # flake8-errmsg
  "PLC", # pylint conventions
  "PLE", # pylint errors
  "SIM", # flake8-simplify
  "RET", # flake8-return
  "YTT", # flake8-2020
  "DTZ", # flake8-datetimez
  "RUF", # ruff
  "TCH", # flake8-type-checking
  "PTH", # flake8-use-pathlib
  "PIE", # flake8-pie
  "ASYNC", # flake8-async
]

[tool.basedpyright]
exclude = [
  ".git",
  ".venv",
  ".idea",
  ".vscode",
  "build",
  "dist",
]
typeCheckingMode = "standard"
pythonPlatform = "All"
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = true
reportMissingParameterType = true
